# depth_model_suevey

./: .gitignore  README.md  main.py  pyproject.toml
_forAI/: dev_log.md  inventory.md  memo.md
_forai/: README.md  dev_log.md  inventory.md  memo.md  plan.md
examples/depth_anything_v2_minimal/: README.md  main.py
examples/pointcloud_to_mesh/: README.md  main.py
pds/applications/: NOTE.md
pds/models/depth_anything_v2/: NOTE.md
pds/models/marigold/: NOTE.md
pds/models/metric3d_v2/: NOTE.md
pds/models/midas/: NOTE.md
pds/models/zoedepth/: NOTE.md
pds/papers/: README.md
web_demo/: README.md  ecosystem.config.cjs
web_demo/backend/app/: main.py
web_demo/backend/app/api/routes/: jobs.py
web_demo/backend/app/core/: settings.py
web_demo/backend/app/schemas/: job.py
web_demo/backend/app/services/: pipeline.py  store.py
web_demo/backend/data/jobs/53304cf8-7df2-4f56-bff9-a399421b9838/: voxels.json
web_demo/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web_demo/frontend/src/: App.tsx  MeshViewer.tsx  api.ts  main.tsx  styles.css
